--- a/quiz/templates/quiz/attemp.html
+++ b/quiz/templates/quiz/attemp.html
@@ -38,18 +38,24 @@
 <script>
 
 
-  let cnt = 0;
-  
-    let csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;;
-    console.log(csrfToken);
+  let questions_id = 0;
 
-    const headers = new Headers({
-      'Content-Type': 'application/json',
-      'X-CSRFToken': csrfToken
-    });
+  let csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;;
+  console.log(csrfToken);
 
-    function fetchAnswer(question_id , question_grade) {
-      console.log(localStorage['quiz_id'])
+  const headers = new Headers({
+    'Content-Type': 'application/json',
+    'X-CSRFToken': csrfToken
+  });
+
+  function gradeEssay(text)
+  {
+    if(text.length < 50)
+      return 0 
+    return Math.max( Math.floor(Math.random() * text.length)%11 , 5) ;
+  }
+
+  function fetchAnswer(question_id, question_grade) {
     let fetchRes = fetch('answer_exam/', {
       method: 'POST',
       headers,
@@ -121,7 +127,7 @@
       '<p class="col-span-9" style="font-size: 32px; font-weight: bold;overflow-wrap: break-word;">' +
       question_head +
       "</p>" +
-      '<div class="col-span-10 grid grid-cols-10 gap-6 mt-12" name="mcq" id="' + cnt + '" >' +
+      '<div class="col-span-10 grid grid-cols-10 gap-6 mt-12" name="mcq" id="' + question.question_id + '" >' +
       options +
       "</div>" +
       "</div>" +
@@ -132,7 +138,7 @@
   function cols_inputs(cnt, question) {
     var res = "";
     for (let i = 0; i < question["question_columns"].length; i++) {
-      res = res + '<input type="radio" name="row' + cnt + '">';
+      res = res + '<input type="radio" name="row_input' + cnt + '">';
     }
     return res;
   }
@@ -152,12 +158,12 @@
       var inputs = cols_inputs(cnt, question);
       rows =
         rows +
-        '<div class="col-span-10 grid grid-cols-10 mt-3" style="background-color: #f8f9fa; padding: 20px;">' +
-        '<div class="col-start-1"></div>' +
+        '<div class="col-span-10 grid grid-cols-10 mt-3" name ="row" style="background-color: #f8f9fa; padding: 20px;">' +
+        '<div class="col-start-1" name="right_wrong"></div>' +
         '<p class="col-span-3" style="overflow-wrap: break-word;">' +
         r +
         "</p>" +
-        '<div class="col-span-6 flex justify-evenly">' +
+        '<div class="col-span-6 flex justify-evenly" name="row_inputs">' +
         inputs +
         "</div>" +
         "</div>";
@@ -175,7 +181,7 @@
       '<p class="col-span-9" style="font-size: 32px; font-weight: bold;overflow-wrap: break-word;">' +
       question_head +
       "</p>" +
-      '<div class="col-span-10 grid grid-cols-10 mt-12" id="' + cnt + '" >' +
+      '<div class="col-span-10 grid grid-cols-10 mt-12" id="' + question.question_id + '" name = "matching">' +
       '<div class="col-start-4"></div>' +
       '<div class="col-span-6 flex justify-evenly  ">' +
       cols +
@@ -198,8 +204,8 @@
       '<p class="col-span-9" style="font-size: 32px; font-weight: bold;overflow-wrap: break-word;">' +
       question_head +
       "</p>" +
-      '<div class="col-span-10 grid grid-cols-10 mt-12 id="' + cnt + '"">' +
-      '         <div class="col-start-1"></div>' +
+      '<div class="col-span-10 grid grid-cols-10 mt-12" id="' + question.question_id + '" name="torf">' +
+      '         <div class="col-start-1" name ="right_wrong"></div>' +
       '<input class="col-span-1" type="radio" name="tf">' +
       '<p class="col-span-3" style="font-size: 22px;">True</p>' +
       '<input class="col-span-1" type="radio" name="tf">' +
@@ -209,6 +215,8 @@
       "</div>";
     p.insertBefore(d, p.lastElementChild);
   }
+  
+
 
   function essay(question) {
     var p = document.getElementById("container");
@@ -222,9 +230,9 @@
       '<p class="col-span-9" style="font-size: 32px; font-weight: bold;overflow-wrap: break-word;">' +
       question_head +
       "</p>" +
-      '<div class="col-span-10 grid grid-cols-10 mt-12 id="' + cnt + '"">' +
+      '<div class="col-span-10 grid grid-cols-10 mt-12" id="' + question.question_id + '" name="essay">' +
       '         <div class="col-start-1"></div>' +
-      '<textarea class="col-span-8" style="padding: 15px 0px 0px 10px;background-color: #f8f9fa;min-height: 200px;" placeholder="Your Answer"></textarea>' +
+      '<textarea class="col-span-8" style="padding: 15px 0px 0px 10px;background-color: #f8f9fa;min-height: 200px;" placeholder="Your Answer" id="essay_text" ></textarea>' +
       "</div>" +
       "</div>" +
       "</div>";
@@ -261,11 +269,12 @@
       .then(function (data) {
         for (q of data) {
           q.question_options = JSON.parse(q.question_options);
+
           if (q.question_type == "MCQ") mcq(q);
           else if (q.question_type == "Matching") matching(q);
           else if (q["question_type"] == "True or False") TorF(q);
           else essay(q);
-          cnt += 1;
+          questions_id += 1;
         }
       })
 
@@ -274,13 +283,27 @@
 
 
   function submit_answers() {
+    var inputs = document.getElementsByTagName("input");
+    for (var i = 0; i < inputs.length; i++) {
+      inputs[i].disabled = true;
+    }
+    var textareas = document.getElementsByTagName("textarea");
+    for (var i = 0; i < textareas.length; i++) {
+      textareas[i].disabled = true;
+    }
+
     fetch('get_quiz_questions/' + localStorage['quiz_id'])
       .then(function (u) { return u.json() })
       .then(function (data) {
         let i = 0;
+        ids = []
+        for (question of data) {
+          id = question.question_id
 
-        while (i < 1) {
-          let e = document.getElementById('0')
+          let e = ''
+          e = document.getElementById(id)
+          let p = document.createElement('p')
+          p.setAttribute('style', 'font-size:25px;text-align:center')
 
           if (e.getAttribute('name') == 'mcq') {
             let options = e.querySelectorAll('input[name="mcq_option"]');
@@ -288,27 +311,120 @@
             let right_wrong = e.querySelectorAll('div[name="right_wrong"]')
 
             let = j = 0;
+            question_score = 0
             for (option of options) {
               if (option.checked) {
-                if (values[j].innerText == data[i].question_right_answer) {
-                  fetchAnswer(data[i].question_id , 10)
+                if (values[j].innerText == question.question_right_answer) {
+                  question_score = 10
                   right_wrong[j].setAttribute('style', 'background-color:#19d513');
                 }
-                else
-                {
-                  fetchAnswer(data[i].question_id , 0)
+                else {
+                  question_score = 0
                   right_wrong[j].setAttribute('style', 'background-color:red');
 
                 }
               }
-              if (values[j].innerText == data[i].question_right_answer)
-                right_wrong[j].setAttribute('style', 'background-color:#19d513');
               j += 1
             }
+
+            p.innerText = question_score.toString() + ' / 10'
+            e.appendChild(p)
+            fetchAnswer(question.question_id, question_score)
           }
-          i += 1
+          else if (e.getAttribute('name') == 'matching') {
+
+
+            let right_answers = JSON.parse(question.question_right_answer)
+            right_answers = right_answers.substring(2, right_answers.length - 2)
+            right_answers = right_answers.split(',')
+            let right_wrong = e.querySelectorAll('div[name="right_wrong"]')
+
+            let rows = e.querySelectorAll('div[name="row"]');
+            rows_cnt = 0;
+            question_score = 0
+            for (row of rows) {
+              let inputs = row.querySelector('div[name="row_inputs"')
+              inputs = inputs.querySelectorAll('input[name="row_input' + rows_cnt + '"]')
+              cols_cnt = 0
+              for (input of inputs) {
+                if (input.checked) {
+                  if (cols_cnt == right_answers[rows_cnt]) {
+                    question_score += 2.5
+                    right_wrong[rows_cnt].setAttribute('style', 'background-color:#19d513');
+
+                  }
+                  else {
+                    right_wrong[rows_cnt].setAttribute('style', 'background-color:red');
+                  }
+                }
+                cols_cnt += 1
+              }
+              rows_cnt += 1
+            }
+            p.innerText = question_score.toString() + '/ 10'
+            e.appendChild(p)
+            fetchAnswer(question.question_id, question_score)
+          }
+          else if (e.getAttribute('name') == 'torf') {
+
+            let right_wrong = e.querySelector('div[name="right_wrong"]')
+            let answers = e.querySelectorAll('input[name="tf"]')
+            let TorF = 0;
+            let question_score = 0;
+            for (answer of answers) {
+              if (answer.checked) {
+                console.log(question.right_answers)
+                if (question.question_right_answer == "True" && TorF == 0) {
+                  question_score = 10;
+                  right_wrong.setAttribute('style', 'background-color:#19d513');
+                }
+                else {
+                  question_score = 0
+                  right_wrong.setAttribute('style', 'background-color:red');
+                }
+              }
+              TorF += 1
+            }
+            p.innerText = question_score.toString() + '/ 10'
+            e.appendChild(document.createElement('br'))
+            e.appendChild(p)
+            fetchAnswer(question.question_id, question_score)
+          }
+          else {
+            let right_wrong = e.querySelector('div[name="right_wrong"]')
+            let answer = document.getElementById('essay_text')
+            let question_score = gradeEssay(answer.value) ; 
+            p.innerText = question_score.toString() + '/ 10'
+            e.appendChild(document.createElement('br'))
+            e.appendChild(p)
+            fetchAnswer(question.question_id, question_score)
+          }
+
         }
       })
+  }
+
+  function gradeEsssay(question_answer)
+  {
+    let fetchRes = fetch('grade_essay/', {
+      method: 'POST',
+      headers,
+      credentials: 'include',
+      body: JSON.stringify(
+        [
+          {
+            "exam": String(localStorage['quiz_id']),
+            "question": question_id,
+            "answer": question_answer
+          }
+        ]
+      )
+    });
+    fetchRes.then(res =>
+      res.json()).then(d => {
+        return d.grade;
+      })
+
   }
 
 
