--- a/quiz/templates/quiz/quiz_maker.html
+++ b/quiz/templates/quiz/quiz_maker.html
@@ -101,7 +101,6 @@
     var duration = parseInt(dh.value) * 60 + parseInt(dm.value)
     var dateTime = new Date(Date.parse(document.getElementById('quiz_date').value + ' ' + th.value + ':' + tm.value + ":00"))
 
-
     let csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;;
     const headers = new Headers({
       'Content-Type': 'application/json',
@@ -122,7 +121,141 @@
     fetchRes.then(res =>
       res.json()).then(d => {
         console.log(d)
+        create_questions(d)
       })
+
+    
+
+  }
+
+  function create_questions(d) {
+    var questions = document.querySelectorAll('div[class="question shadow  justify-center"]')
+    let question_head = ''
+    let question_type = ''
+    let question_options = []
+    let question_rows = []
+    let question_columns = []
+    let question_right_answer = ''
+
+
+    for (question of questions) {
+      let q = ''
+      question_type = question.getAttribute('name')
+      question_head = question.querySelector('textarea[name="question_head"]').value
+      if (question_type == 'mcq') {
+        html_question_options = question.querySelectorAll('textarea[name="mcq_option_value"]')
+        html_question_inputs = question.querySelectorAll('input[name="mcq_option_input"]')
+        let i = 0;
+        for (option of html_question_options) {
+          if (html_question_inputs[i].checked) {
+            question_right_answer = option.value
+          }
+          question_options.push(option.value)
+          i += 1
+        }
+
+      }
+      else if(question_type =='matching')
+      {
+        html_rows = question.querySelectorAll('textarea[name="matching_rows"]')
+        html_cols = question.querySelectorAll('textarea[name="matching_cols"]')
+        for(row of html_rows)
+        {
+          question_rows.push(row.value)
+        }
+        for(col of html_cols)
+        {
+          question_columns.push(col.value)
+        }
+        question_rows = question_rows.toString()
+        question_columns = question_columns.toString()
+        
+        question_right_answer = question.querySelector('textarea[name="mathcing_right_answers"]').value
+        question_right_answer = question_right_answer.split(' ').toString()
+      }
+      else if(question_type =="torf")
+      {
+        inputs = question.querySelectorAll('input[name="torf_input"]')
+        if(inputs[0].checked)
+        {
+          question_right_answer = "True"
+        }
+        else
+          question_right_answer = "False"
+
+      }
+
+
+      q = {
+        "exam": d.id,
+        "question_head": question_head,
+        "question_type": question_type,
+        "question_options": question_options.toString(),
+        "question_rows": question_rows,
+        "question_columns": question_columns,
+        "question_right_answer": question_right_answer,
+      }
+      // console.log(q)
+      fetch_question(q);
+    }
+  }
+
+  function fetch_question(question) {
+
+    
+
+    let csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;;
+    const headers = new Headers({
+      'Content-Type': 'application/json',
+      'X-CSRFToken': csrfToken
+    });
+    var body = ''
+    if (question.question_type == 'mcq') {
+      body = JSON.stringify({
+          "exam": question.exam,
+          "question_head": question.question_head,
+          "question_type": question.question_type,
+          "question_options": question.question_options,
+          "question_right_answer": question.question_right_answer,
+        })     
+    }
+    else if (question.question_type == 'matching') {
+      body = JSON.stringify({
+          "exam": question.exam,
+          "question_head": question.question_head,
+          "question_type": question.question_type,
+          "question_rows": question.question_rows,
+          "question_columns": question.question_columns,
+          "question_right_answer": question.question_right_answer,
+        })     
+    }
+    else if (question.question_type == 'torf') {
+      body = JSON.stringify({
+          "exam": question.exam,
+          "question_head": question.question_head,
+          "question_type": question.question_type,
+          "question_right_answer": question.question_right_answer,
+        })     
+    }
+    else if (question.question_type == 'essay') {
+      body = JSON.stringify({
+          "exam": question.exam,
+          "question_head": question.question_head,
+          "question_type": question.question_type,
+        })     
+    }
+    
+      let fetchRes = fetch('create_question/', {
+        method: 'POST',
+        headers,
+        credentials: 'include',
+        body: body
+      });
+    fetchRes.then(res =>
+      res.json()).then(d => {
+        console.log(d)
+      })
+
   }
 
 
@@ -132,7 +265,7 @@
     var th = document.getElementById("time_hours");
     var tm = document.getElementById("time_minutes");
 
-    for (i = 0; i <= 23; i++) {
+    for (i = 1; i <= 24; i++) {
       var e = document.createElement("option");
       var x = document.createElement("option");
       e.innerText = i - 1;
@@ -151,6 +284,8 @@
     }
   }
 
+
+
   function add_question() {
     var container = document.getElementById("container");
     var select = document.getElementById("types");
@@ -159,7 +294,7 @@
     if (select.value == "MCQ") {
       p.innerHTML =
         "<!--------------------------------------Questions conrainer  -------------------------------->" +
-        '<div class="question shadow  justify-center ">' +
+        '<div class="question shadow  justify-center" name="mcq">' +
         "<!------------------------------ Question head -------------------------------------->" +
         '<div class="grid grid-cols-10 gap-6 " style="padding: 50px;">' +
         '<div class="col-start-1"></div>' +
@@ -170,8 +305,8 @@
         '<div class="grid grid-cols-10 gap-6" style="padding: 10px 0px 50px 0px;" id="q1">' +
         '<div class="col-span-10 grid grid-cols-10 gap-6" id="option_1">' +
         '<div class="col-start-1"></div>' +
-        '<input type="radio" style="min-height: 65px; ">' +
-        '<textarea class="col-span-6" placeholder="Option"' +
+        '<input type="radio" name="mcq_option_input" style="min-height: 65px; ">' +
+        '<textarea class="col-span-6" name="mcq_option_value" placeholder="Option"' +
         'style="padding: 20px 0px 0px 10px ; max-height: 55px;"></textarea>' +
         '<div class="col-span-1 flex flex-col justify-center">' +
         '<i class="fas fa-times fa-2x delete_icon"' +
@@ -188,7 +323,7 @@
     } else if (select.value == "Matching") {
       p.innerHTML =
         "<!--------------------------------------Question conrainer  -------------------------------->" +
-        '<div class="question shadow  justify-center ">' +
+        '<div class="question shadow  justify-center" name="matching">' +
         "<!------------------------------ Question head -------------------------------------->" +
         '<div class="grid grid-cols-10 gap-6 " style="padding: 50px;">' +
         '<div class="col-start-1"></div>' +
@@ -196,11 +331,16 @@
         'style="padding: 15px 0px 0px 10px ; background-color: #f8f9fa; max-height: 60px;"></textarea></div>' +
         "<!------------------------------ Question head -------------------------------------->" +
         "<!------------------------------ Question body -------------------------------------->" +
-        '<div class="grid grid-cols-12" style="padding-bottom: 50px;">' +
+        '<div class="grid grid-cols-12" style="padding-bottom: 50px;">' + 
+        '<div class="col-start-1"></div>' +
+        '<div class="col-span-10" style="padding-bottom: 50px;">'+
+        '<textarea name="mathcing_right_answers" style="width:100%" placeholder="Right Answers"></textarea>'+
+        '</div>'+
+        '<div class="col-end-1"></div>' +
         '<div class="col-start-1"></div>' +
         '<div class="col-span-5 grid grid-cols-5" id="rows">' +
         '<div class="col-span-5 grid grid-cols-5 gap-6">' +
-        '<textarea class="col-span-4" placeholder="Row"' +
+        '<textarea class="col-span-4" name="matching_rows" placeholder="Row"' +
         'style="padding: 20px 0px 0px 10px ; max-height: 55px;"></textarea>' +
         '<div class="col-span-1 flex flex-col justify-center">' +
         '<i class="fas fa-times fa-2x delete_icon"' +
@@ -215,7 +355,7 @@
         "</div>" +
         '<div class="col-span-5 grid grid-cols-5" id="columns">' +
         '<div class="col-span-5 grid grid-cols-5 gap-6">' +
-        '<textarea class="col-span-4" placeholder="Column"' +
+        '<textarea class="col-span-4"name="matching_cols" placeholder="Column"' +
         'style="padding: 20px 0px 0px 10px ; max-height: 55px;"></textarea>' +
         '<div class="col-span-1 flex flex-col justify-center">' +
         '<i class="fas fa-times fa-2x delete_icon"' +
@@ -242,7 +382,7 @@
         "</div>";
     } else if (select.value == "True or False") {
       p.innerHTML =
-        '<div class="question shadow  justify-center ">' +
+        '<div class="question shadow  justify-center" name="torf">' +
         "<!---------------------------Quiz head-------------------------------------->" +
         '<div class="grid grid-cols-10 gap-6 " style="padding: 50px;">' +
         '<div class="col-start-1"></div>' +
@@ -258,11 +398,11 @@
         '                <formc class="form-group grid grid-cols-7" style="font-size: 22px;">' +
         '                <div class="col-start-1"></div>' +
         '        <div class="col-span-3">' +
-        '                <input type="radio" name="TorF">' +
+        '                <input type="radio" name="torf_input">' +
         "        <label>True</label>" +
         "</div>" +
         '<div class="col-span-3">' +
-        '        <input type="radio" name="TorF">' +
+        '        <input type="radio" name="torf_input">' +
         "<label>False</label>" +
         "</div>" +
         "</form>" +
@@ -278,7 +418,7 @@
         "</div>";
     } else if (select.value == "Essay") {
       p.innerHTML =
-        '<div class="question shadow  justify-center" >' +
+        '<div class="question shadow  justify-center" name="essay">' +
         "<!---------------------------Quiz head-------------------------------------->" +
         '<div class="grid grid-cols-10 gap-6 " style="padding: 50px;">' +
         '        <div class="col-start-1"></div>' +
@@ -318,7 +458,7 @@
     new_option.innerHTML =
       '<div class="col-start-1"></div> ' +
       '<input type="radio" style="min-height: 65px; "> ' +
-      '<textarea class="col-span-6" placeholder="Option" ' +
+      '<textarea class="col-span-6" placeholder="Option" name = "mcq_option_value' +
       '        style="padding: 20px 0px 0px 10px ; max-height: 55px;"></textarea> ' +
       '<div class="col-span-1 flex flex-col justify-center"> ' +
       '        <i class="fas fa-times fa-2x delete_icon" id="option_1" onclick="delete_option(this)"></i> ' +
@@ -338,7 +478,7 @@
     var new_row = document.createElement("div");
     new_row.classList.add("col-span-5", "grid", "grid-cols-5", "gap-6");
     new_row.innerHTML =
-      '<textarea class="col-span-4" placeholder="Row"' +
+      '<textarea class="col-span-4" placeholder="Row" name ="matching_rows" ' +
       'style = "padding: 20px 0px 0px 10px ; max-height: 55px;" ></textarea >' +
       '<div class="col-span-1 flex flex-col justify-center">' +
       '<i class="fas fa-times fa-2x delete_icon"' +
@@ -351,7 +491,7 @@
     var new_row = document.createElement("div");
     new_row.classList.add("col-span-5", "grid", "grid-cols-5", "gap-6");
     new_row.innerHTML =
-      '<textarea class="col-span-4" placeholder="Column"' +
+      '<textarea class="col-span-4" placeholder="Column" name="matching_cols" ' +
       'style = "padding: 20px 0px 0px 10px ; max-height: 55px;" ></textarea >' +
       '<div class="col-span-1 flex flex-col justify-center">' +
       '<i class="fas fa-times fa-2x delete_icon"' +
