--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -37,7 +37,11 @@
 
 <script>
 
+  nav = document.querySelectorAll('span[name="nav_page"]')
+  nav[0].classList.remove('selected')
+  nav[2].classList.add('selected')
 
+  
 
   function fill_data() {
 
