--- a/quiz/templates/quiz/attemp.html
+++ b/quiz/templates/quiz/attemp.html
@@ -37,7 +37,9 @@
 
 <script>
 
-
+nav = document.querySelectorAll('span[name="nav_page"]')
+  nav[0].classList.remove('selected')
+  nav[2].classList.add('selected')
 
   let csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;;
   console.log(csrfToken);
